# psqlfmt

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
src/: config.rs  editorconfig.rs  formatter.rs  keywords.rs  lexer.rs  lib.rs  main.rs  paths.rs
tests/: cli.rs
