[package]
name = "psqlfmt"
version = "0.1.1"
edition = "2024"
description = "An opinionated Rust PostgreSQL SQL formatter"
license = "PostgreSQL"
authors = ["psqlfmt contributors"]
repository = "https://github.com/psqlfmt/psqlfmt"
homepage = "https://github.com/psqlfmt/psqlfmt"
documentation = "https://docs.rs/psqlfmt"
readme = "README.md"
keywords = ["postgresql", "sql", "formatter", "cli", "plpgsql"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
globset = "0.4"
ignore = "0.4"
once_cell = "1.21"
regex = "1.11"
thiserror = "2.0"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.20"
